fix: remove horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 * {
     box-sizing: border-box;
     color: #FFFFFF;
@@ -15,7 +19,7 @@ p {
     margin: auto auto;
     background: linear-gradient(192.05deg, #47BFDF 0%, #4A91FF 100%);
     box-shadow: -5px 10px 40px 3px rgba(19, 35, 78, 0.2);
-    border-radius: 14px;
+    /* border-radius: 14px; */
     display: flex;
     flex-direction: column;
     align-items: center;
